shape of webpage

--- a/index.html
+++ b/index.html
@@ -1,66 +1,24 @@
 <!DOCTYPE html>
+<html lang="en">
 
 <head>
     <meta charset="UTF-8">
-
-    <title>Radek's Personal Site</title>
+    <title>Radoslaw Wawryczuk</title>
+    <link rel="stylesheet" href="css/styles.css">
+    <link rel="icon" href="favicon.ico">
 </head>
 
 <body>
-    <table cellspacing = "20">
-        <td>
-            <img src="images/image-modified (2).png" alt="">
-        </td>
-        <td>
-            <h1>Radoslaw Wawryczuk</h1>
-            <p> <em> <strong>Engineer & programmer</strong> </em> </p>
-            <p>I am an engineer, Web and C++ developer. </p>
-        </td>
+    <div class="top-container">
+        <h1>I'm Radek</h1>
+        <p>a programmer</p>
+    </div>
+    <div class="middle-container">
 
-    </table>
-    <hr>
-    <h3>Education</h3>
-    <ul>
-        <li>Engineering studies: Wroclaw University of Technology</li>
-        <li>Masters studies: Wroclaw University of Technology</li>
-    </ul>
-    <h3>Work Expierience</h3>
-    <table cellspacing = "10">
-        <thead>
-            <tr>
-                <th>Period</th>
-                <th>Company</th>
-            </tr>
-        </thead>
-        <tr>
-            <td>2016-2017</td>
-            <td>Italmetal</td>
-        </tr>
-        <tr>
-            <td>2019-2020</td>
-            <td>Endress+Hauser</td>
-        </tr>
-    </table>
-    <h3>Skills</h3>
-    <table cellspacing = "10">
-        <tr>
-            <td>C++</td>
-            <td>⭐⭐⭐⭐⭐</td>
-        </tr>
-        <tr>
-            <td>HTML</td>
-            <td>⭐</td>
-        </tr>
-    </table>
-    <hr>
-    <h3>My Hobbies</h3>
-    <ol>
-        <li>Football</li>
-        <li>History</li>
-        <li>Philosophy</li>
-    </ol>
+    </div>
+    <div class="bottom-container">
 
-    <a href="contact.html">Contact me</a>
+    </div>
 </body>
 
 </html>
