--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
     </div>
     <div class="middle-container">
         <div class="profile">
-            <img src="" alt="">
-            <h2>Hello.</h2>
+            <img src="images/image-modified (2).png" alt="">
+            <h2>Hello</h2>
             <p>Lorem ipsum dolor sit amet, vitae volutpat, dui conubia, dolor urna. Non auctor, montes nulla distinctio.
             </p>
         </div>
@@ -31,16 +31,14 @@
         <div class="skills">
             <h2>My Skills.</h2>
             <div class="skill-row">
-                <img class="" src="" alt="">
-                <h3>Lorem & Ipsum</h3>
-                <p>Lorem ipsum dolor sit amet, quis in duis, iaculis id felis. Consectetuer vestibulum, nunc urna
-                    lectus, erat ligula. Hendrerit nam, lectus ante, ut lorem eros.</p>
+                <img class="" src="images/skills-icon-modified.png" alt="" width = "100">
+                <h3>C++<h3>
+                <p> I am a C++ programmer</p>
             </div>
             <div class="skill-row">
-                <img class="" src="" alt="">
-                <h3>Lorem Ipsum Dolor</h3>
-                <p>Lorem ipsum dolor sit amet, mauris sed consectetuer. Etiam et eu, bibendum interdum, lacus quis
-                    mauris. Curabitur wisi, quisque vel eu, rutrum nam.</p>
+                <img class="" src="images/footbal-icon.jpg" alt="" width="200" height="120">
+                <h3>and a footballer</h3>
+                <p>I am a CAM</p>
             </div>
         </div>
         <hr>
