--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <div class="top-container">
         <img class="top-cloud" src="images/cloud.png" alt="cloud-img">
         <h1>I'm Radek</h1>
-        <p>a <span class="pro">pro</span>grammer</p>
+        <h2>a <span class="pro">pro</span>grammer</h2>
         <img class="bottom-cloud" src="images/cloud.png" alt="cloud-img">
         <img src="images/mountain.png" alt="mountain-img">
     </div>
@@ -24,28 +24,28 @@
         <div class="profile">
             <img src="images/image-modified (2).png" alt="">
             <h2>Hello</h2>
-            <p>Lorem ipsum dolor sit amet, vitae volutpat, dui conubia, dolor urna. Non auctor, montes nulla distinctio.
+            <p>Nice to meet you. Enjoy my webpage 
             </p>
         </div>
         <hr>
         <div class="skills">
             <h2>My Skills.</h2>
             <div class="skill-row">
-                <img class="" src="images/skills-icon-modified.png" alt="" width = "100">
-                <h3>C++<h3>
-                <p> I am a C++ programmer</p>
+                <img class="cskills" src="images/skills-icon-modified.png" alt="" >
+                <h3>C++</h3>
+                <p class="description"> I am a C++ programmer</p>
             </div>
             <div class="skill-row">
-                <img class="" src="images/footbal-icon.jpg" alt="" width="200" height="120">
-                <h3>and a footballer</h3>
-                <p>I am a CAM</p>
+                <img class="football-skills" src="images/footbal-icon.jpg" alt="" >
+                <h3>And a footballer</h3>
+                <p class="description">I am a CAM</p>
             </div>
         </div>
         <hr>
         <div class="contact-me">
             <h2>Get In Touch</h2>
-            <h3>Lorem ipsum dolor sit amet, non elit.</h3>
-            <p>Lorem ipsum dolor sit amet, in quis, aenean amet. Phasellus sodales, tellus donec dui, ornare erat.</p>
+            <h3>I am available</h3>
+            <p>If you want to have some C++ code or play some match...</p>
             <a class="btn" href="mailto:name@email.com">CONTACT ME</a>
         </div>
     </div>
