--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         <div class="profile">
             <img src="images/image-modified (2).png" alt="">
             <h2>Hello</h2>
-            <p>Nice to meet you. Enjoy my webpage 
+            <p class="into">Nice to meet you. Enjoy my webpage 
             </p>
         </div>
         <hr>
@@ -45,17 +45,17 @@
         <div class="contact-me">
             <h2>Get In Touch</h2>
             <h3>I am available</h3>
-            <p>If you want to have some C++ code or play some match...</p>
+            <p class="contact-message">If you want to have some C++ code or play some match...</p>
             <a class="btn" href="mailto:name@email.com">CONTACT ME</a>
         </div>
     </div>
 </body>
 
 <div class="bottom-container">
-    <a class="footer-link" href="https://www.linkedin.com/">LinkedIn</a>
-    <a class="footer-link" href="https://twitter.com/">Twitter</a>
-    <a class="footer-link" href="https://www.appbrewery.co/">Website</a>
-    <p>© Name Surname.</p>
+    <a class="footer-link" href="https://www.linkedin.com/in/rados%C5%82aw-wawryczuk-8a0817139/">LinkedIn</a>
+    <a class="footer-link" href="https://github.com/JoseArcadioMoralees">GitHub</a>
+
+    <p class="copyright">©2023 Radosław Wawryczuk</p>
 </div>
 
 </html>
